<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="280dp"
    android:layout_height="match_parent"
    android:padding="2dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@color/colorPrimary">
        <TextView
            android:id="@+id/tour_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:text="@string/track_dialog_title"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/track_dialog_show_in_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="8dp"
                android:textSize="20sp"
                android:textColor="@color/orange"
                android:text="@string/track_dialog_show_in_map"/>
            <TextView
                android:id="@+id/track_dialog_delete_track"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="15dp"
                android:textSize="20sp"
                android:textColor="@color/orange"
                android:text="@string/track_dialog_delete_track"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>