<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="320dp"
    android:layout_height="match_parent"
    android:padding="2dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="@color/colorPrimary">
        <TextView
            android:id="@+id/tour_name_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center_horizontal"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:text="@string/save_dialog_tour_name"/>
        <EditText
            android:id="@+id/tour_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:textSize="20sp"
            android:background="@color/white"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="12dp"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/save_dialog_tour_activity"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/grey">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary">
                    <Spinner
                        android:id="@+id/tour_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </Spinner>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal">
            <Button
                android:id="@+id/button_save_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:minWidth="46dp"
                android:minHeight="24dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textAllCaps="false"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="1"
                android:text="@string/ok_button"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:background="@drawable/button_shape"/>
            <Button
                android:id="@+id/button_save_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:minWidth="46dp"
                android:minHeight="24dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textAllCaps="false"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="1"
                android:text="@string/cancel_button"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:background="@drawable/button_shape"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>